     * Allow moodbar files witout the leading '.' (both .<trackfilename>.mood 
       and <trackfilename>.mood now work) 
     * Change example SQL command for setting up an external database to remove
       (sometimes incorrect) host name and possibly fix some random regression in
       some MySQL versions. (BR 225052)

  BUGFIXES:
     * Fixed command type names shown in the Bookmark Manager not being translated.
       (BR 226829)
     * Fixed crash on startup for users of MySQL 5.5. Thanks to Bartosz Fabianowski
       for figuring it out. (BR 231166)
     * Readded missing hover info for the new filebrowser.
     * Fixed missing images in the hover info shown for various browser categories.
     * Fixed crash when running some Amarok urls on startup. (such as when passed on
       the command line or cliked in another app) (BR 231626)
     * Fixed crashes when Amarok is started and the Info applet is loaded with 
       certain version of Qt. (BR 227639) (BR 229756) 
     * Fixed organize collection dialog deleting tracks at new location
       instead of old. (BR 217002)
     * Fixed a broken podcast feed that had a minor compliance issue in date
       format. (BR 231062)
     * Fixed "files" bookmarks not storing the actual path shown in the file 
       browser (BR 231437)
     * Fixed incorrectly displayed cover images for albums with the same name,
       e.g. "Greatest Hits". (BR 170146)
     * Fixed problems with new Main Toolbar and SHOUTcast streams: Since these
       streams cannot be paused, we detect this now and stop them instead.
     * Fixed permission errors with each file copied to an iPhone via iFuse.
       Thanks to Colin Guthrie <cguthrie@mandriva.org> for the patch. (BR 231021)
     * Fixed issues with using random navigators while filetering or searching the
       Playlist. (BR 229226) (BR 222129)
     * Fixed crash related to the new playlist tooltips. (BR 229696)