@@ -51,6 +51,7 @@ VERSION 2.3.1-Beta 1
        some MySQL versions. (BR 225052)
 
   BUGFIXES:
+     * Fixed broken rendering of ratings in Current Track applet on startup.
      * Fixed command type names shown in the Bookmark Manager not being translated.
        (BR 226829)
      * Fixed crash on startup for users of MySQL 5.5. Thanks to Bartosz Fabianowski
